alignment fixed for menu

--- a/public/assets/scss/locals/fdi/fdi-home.scss
+++ b/public/assets/scss/locals/fdi/fdi-home.scss
@@ -1,5 +1,4 @@
 .about-portfolio-section-wrapper {
-
     .about-content {
         max-width: 80%;
         margin: auto;
@@ -15,15 +14,19 @@
 
         .paragraph {
             position: relative;
-            &::after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                height: 100px;
-                background: linear-gradient(to bottom, #ffffff10, white);;
-                bottom: 0;
-                left: 0;
-            }
+            max-height: 150px;
+            overflow: hidden;
+            transition: 0.2s ease;
+            background: linear-gradient(to bottom, #ffffff10, white);
+        }
+
+        .toggle-checkbox {
+            display: none;
+        }
+
+        .toggle-checkbox:checked ~ .col-12 .paragraph {
+            max-height: 1000px; /* Arbitrary large value to allow expansion */
+            background: none; /* Remove the gradient when expanded */
         }
 
         .read-more-btn {
@@ -35,13 +38,20 @@
             background: none;
             border: 2px solid black;
             border-radius: 50px;
+            cursor: pointer;
+        }
+
+        .toggle-checkbox:checked + .col-12 + .col-12 .read-more-btn {
+            content: 'Read Less';
         }
     }
-
 }
 
 
-.key-benefits-section-wrapper{
+
+
+
+.key-benefits-section-wrapper {
     .sub-heading {
         color: $light-text;
         font-size: 24px;
