--- a/public/assets/scss/locals/footer-component.scss
+++ b/public/assets/scss/locals/footer-component.scss
@@ -71,7 +71,7 @@
                     width: 50%;
                     transform: translateX(0%);
                     height: 2px;
-                    background: linear-gradient(to right, $primary-color, black);
+                    background: $primary-color;
                     border-radius: 8px;
                     opacity: 0;
                     transition: transform 0.3s ease-in, opacity 0.15s ease-in-out;
