--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -144,7 +144,9 @@ hr {
 
 
 
-
+ul {
+    margin: 0
+}
 
 
 
